# realm.one

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  host.sh
.circleci/: config.yml
.github/workflows/: rust.yml
docs/: items.drawio  lifeform.drawio
features/F001/: README.md
features/F002/: README.md
features/F003/: README.md
features/F004/: README.md
features/F005/: README.md
features/F006/: README.md
features/F009/: README.md
features/F015/: README.md
features/F016/: README.md
game_spr/: Cargo.toml
game_spr/src/: main.rs
resources/: bindings.ron  config.ron  display_config.ron
resources/background/: background.ron  background.xcf
resources/fonts/: fontlarge-0.ron  fontlarge.ron  text.ron
resources/maps/: first.tmx  town.tmx  townCompress.tmx  townCompress2.tmx
resources/sprites/: README.md  basictiles.ron  basictiles.tsx  build.sh  characters.ron  characters.tsx  first.tmx  master16.ron  master16.tsx  ronMaker.py  town.tmx
spec/: spec.tex
sprits/tiles/: things.tsx
src/: appconfig.rs  character_sprites.rs  constants.rs  key_bindings.rs  main.rs  map.rs  mech.rs  network.rs  obj.rs  state.rs  tiles.rs
src/components/: animation.rs  id.rs  item.rs  item_action.rs  item_event.rs  lifeform.rs  melee_animation.rs  mod.rs  monster.rs  move.rs  movement.rs  outfits.rs  player.rs  player_action.rs  sync.rs  walk_animation.rs
src/events/: mod.rs  wallet_events.rs
src/gameplaystate/: map.rs  mod.rs
src/network/: client.rs  mod.rs  server.rs
src/resources/: appconfig.rs  client_status.rs  command.rs  input.rs  inventory.rs  io.rs  items.rs  lifeform_uid.rs  lifeformlist.rs  maplist.rs  mod.rs  playerlist.rs  spritescontainer.rs
src/states/: gameplay_state.rs  mod.rs  server_state.rs
src/states/gameplay_state/: mod.rs
src/states/server_state/: mod.rs
src/systems/: client.rs  map.rs  mod.rs  player.rs  server.rs
src/systems/client/: animation.rs  chat.rs  input.rs  item_sync.rs  lifeform.rs  lifeform_man.rs  map.rs  melee.rs  mod.rs  move.rs  movement.rs  network.rs  player.rs  playerman.rs  tcp.rs  walk.rs  wallet.rs
src/systems/server/: ai.rs  auth.rs  lifeform.rs  (+6 more)
