[package]
name = "realm-one"
version = "0.0.1"
authors = ["Team Awesome"]
edition = "2018"

[dependencies]
amethyst = "0.13.2"
log = { version = "0.4.8", features = ["serde"] }
tiled = { git = "https://github.com/mattyhall/rs-tiled" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
