[package]
name = "realm-one"
version = "0.0.1"
authors = ["Team Awesome"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/machine-hum/amethyst" }
# amethyst = { git = "https://github.com/amethyst/amethyst" }
# amethyst = { path = "../amethyst" }
log = { version = "0.4.8", features = ["serde"] }
tiled = { git = "https://github.com/mattyhall/rs-tiled" }
serde = { version = "1", features = ["derive"] }
bincode = "1.2.1"
stringreader = "0.1.1"
ron = "*"
nalgebra = "0.19.0"

[features]
# default = ["vulkan"] # For linux Windows
default = ["metal"] # For linux Windows
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
