[package]
name = "realm-one"
version = "0.0.1"
authors = ["Team Awesome"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = { version = "0.4.8", features = ["serde"] }
tiled = { git = "https://github.com/mattyhall/rs-tiled" }
serde = { version = "1", features = ["derive"] }
bincode = "1.2.1"
serde_json = "1.0"
stringreader = "0.1.1"
ron = "*"
nalgebra = "0.19.0"
rand = "0.7.3"
array-init = "0.1.1"

[features]
default = ["vulkan"]   # Windows / Linux (make sure you have alsa-utils on linux installed)
# default = ["metal"]     # macOS

vulkan = ["amethyst/vulkan"]
# nightly = ["amethyst/nightly"]
metal = ["amethyst/metal"]

# profile is set to the --release profile
[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
